added debug mode / added 'when witnessed' field

--- a/Witness Extention/popup.html
+++ b/Witness Extention/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <button>Witness This Page</button>
+    <button id="witness">Witness This Page</button>
     <script src="popup.js" charset="UTF-8"></script>
 
 </body>
