--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -16,22 +16,20 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="d-flex flex-row justify-content-center align-items-center">
-				<div class="flex-column p-2">
-					<label class="switch">
-						<input type="checkbox">
-						<span class="slider round"></span>
-					</label>
-				</div>
-				<div class="flex-column">
-					<h4>On</h4>
-				</div>
+		<div class="d-flex flex-row no-gutters justify-content-center align-items-center">
+			<div class="flex-column p-2">
+				<label class="switch">
+					<input type="checkbox">
+					<span class="slider round"></span>
+				</label>
 			</div>
-			<div class="d-flex flex-row justify-content-center align-items-center">
-				<div class="flex-column p-2">
-					<button type="button" class="btn btn-success" id="witness">Witness Now</button>
-				</div>
+			<div class="flex-column">
+				<h4>On</h4>
+			</div>
+		</div>
+		<div class="d-flex flex-row no-gutters justify-content-center align-items-center">
+			<div class="flex-column p-2">
+				<button type="button" class="btn btn-success" id="witness">Witness Now</button>
 			</div>
 		</div>
 
