Closes #4 Created a background process to handle persistent storage and the logic to check it on launch and set the browser icon, and sliders appropriately.

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -65,6 +65,8 @@
 		
 		
 		<!-- At the end so it has access to jquery -->
+		<script src="assets/js/constants.js" charset="UTF-8"></script>
+		<script src="assets/js/utilities.js" charset="UTF-8"></script>
 		<script src="popup.js" charset="UTF-8"></script>
 
 	</body>
