Move some files around for organization

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -68,7 +68,7 @@
 		<!-- At the end so it has access to jquery -->
 		<script src="assets/js/constants.js" charset="UTF-8"></script>
 		<script src="assets/js/utilities.js" charset="UTF-8"></script>
-		<script src="popup.js" charset="UTF-8"></script>
+		<script src="assets/js/popup.js" charset="UTF-8"></script>
 
 	</body>
 </html>
