--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -47,7 +47,7 @@
 		</div>
 		<div class="d-flex flex-row no-gutters justify-content-center align-items-center">
 			<div class="flex-column p-2">
-				<button type="button" class="btn btn-success" data-toggle="tooltip" data-placement="auto" id="manual_witness"><i class="fas fa-sync fa-lg"></i></button>
+				<button type="button" id="manual_button" class="btn btn-success" data-toggle="tooltip" data-placement="auto" id="manual_witness"><i class="fas fa-sync fa-lg"></i></button>
 			</div>
 		</div>
 
